--- a/www/index-nohelpdesk-template.html
+++ b/www/index-nohelpdesk-template.html
@@ -25,6 +25,15 @@
 </tr>
 </table>
 <hr>
+<h1>No helpdesk has been configured for this Serval Mesh Extender</h1>
+<p>
+You can set up a help desk for this unit by putting the Serval ID (SID) of the
+help desk into a file called helpdesk.sid file on the USB
+memory stick of this device, or including that file in an over-the-air (OTA)
+update, if you have enrolled this unit in OTA updates (see the
+documentation at http://github.com/servalproject/mesh-extender-builder
+for information on how to do this).
+<hr>
 <h5>The Serval Project's work has only been possible because of the generous support of the following organisations and individual donors</h5>
 <table border=0 cellpadding=5>
 <tr>
