--- a/www/index-helpdesk-template.html
+++ b/www/index-helpdesk-template.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv=”refresh” content=”15" />
 <script>
 function getLocation() {
     if (navigator.geolocation) {
@@ -55,13 +56,28 @@ function showError(error) {
 </table>
 <hr>
 <h1>Mesh Extender Assistance Request Form</h1>
-This form allows you to provide an optionally geo-tagged text message to request assistance.
+This form allows you to provide an optionally geo-tagged text message
+to request assistance, if for some reason you are unable to run the
+Serval Mesh app on your device. The message will be sent to the local
+assistance service provider on the Serval Mesh.
 <p>
-The message will be sent to the local assistance service provider on
-the Serval Mesh.
-</p>
+<b>NOTE</b>: Before sending a message, please read through the replies listed below
+the form, in case your question has already been asked.
 <p>
-NOTE: There may not be a functional assistance provider service on this network.  You should continue to seek assistance through other means.
+<b>NOTE</b>: There may not be a functional assistance provider service on
+this network.  You should continue to seek assistance through other
+means.
+<p>
+<b>NOTE</b>: Any reply will be publicly readable by anyone from this device, and
+only the most recent few replies will be visible.  You should not
+assume that your message has been received, until you receive a reply.
+<p>
+The Serval ID (SID) for your helpdesk is HELPDESKSID. You can change
+this by modifying the contents of the helpdesk.sid file on the USB
+memory stick of this device, or including that file in an over-the-air (OTA)
+update, if you have enrolled this unit in OTA updates (see the
+documentation at http://github.com/servalproject/mesh-extender-builder
+for information on how to do this).
 </p>
 <form name=messageform method=get action="http://MESHEXTENDERIP:21506/submitmessage">
 <p>
@@ -79,21 +95,8 @@ NOTE: There may not be a functional assistance provider service on this network.
 var x = document.getElementById("locationstatus");
 getLocation();
 </script>
+<p>
+<h2>Mesh Extender Assistance Replies</h2>
+The most recent message appears at the top of the list.
 
-<hr>
-<h5>The Serval Project's work has only been possible because of the generous support of the following organisations and individual donors</h5>
-<table border=0 cellpadding=5>
-<tr>
-<td><a href=http://flinders.edu.au>Flinders University</a></td>
-<td><a href=http://nlnet.nl>The NLnet Foundation</a></td>
-<td><a href=http://shuttleworthfoundation.org>The Shuttleworth Foundation</a></td>
-<td><a href=http://awesomefoundation.org>The Awesome Foundation</a></td>
-<td><a href=http://newamericafoundation.org>The New America Foundation</a></td>
-<td><a href=http://internews.org>Internews</a></td>
-</table>
-<p> and many other donors, contributors and supporters.  
-<p>Visit <a href=http://servalproject.org>servalproject.org</a> to find out how to get involved.
-<hr>
-<p><a href=images/credits.html>Image credits</a>
-</body>
-</html>
+<table border=1 padding=2>
